--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,16 @@
         android:theme="@style/Theme.Cashmates"
         tools:targetApi="31">
         <activity
+            android:name=".CreateNoteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Notes"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".Analyze"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SignInActivity"
             android:exported="true">
