--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         tools:targetApi="31">
         <activity
             android:name=".CreateNoteActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Notes"/>
         <activity
             android:name=".Notes"
             android:exported="false"
