--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name=".Notes"
             android:exported="false"
+            android:theme="@style/Theme.MyApplication1"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".Analyze"
